# drivebot_models

drivebot_description/: CMakeLists.txt  package.xml
drivebot_description/scripts/: key_publisher.py  keys_to_twist_with_parameter_server_and_velocity_ramps.py
drivebot_description/urdf/: 01-drivebot.urdf  02-drivebot.urdf  03-drivebot.urdf  04-drivebot.urdf  05-drivebot.urdf  06-drivebot.urdf  07-austins-drivebot.urdf  08-BigWheels.urdf  Chassis.stl  FrontTire.stl  RearTire.stl
drivebot_gazebo/: CMakeLists.txt  package.xml
drivebot_gazebo/config/: drivebot_camera_raw_feed.perspective
drivebot_gazebo/launch/: 02-drivebot.launch  03-drivebot.launch  04-drivebot.launch  05-drivebot.launch  06-drivebot.launch  07-austins-drivebot.launch
drivebot_gazebo/world/: drivebot.world
